Spacing issues fix

--- a/style.css
+++ b/style.css
@@ -8,10 +8,8 @@
 body{
     font-family: 'Proxima Nova', sans-serif;
     background-color:#F0F6F7;
-    margin: 100px;
-
-
 }
+
 ul li{
     font-weight: bold;
 }
